--- a/src/ScrollUp/ScrollUp.css
+++ b/src/ScrollUp/ScrollUp.css
@@ -4,7 +4,6 @@
   right: 20px;
   z-index: 1;
   transition: opacity 0.3s;
-  zoom: 1.2;
 }
 
 .scroll-up-button button {
@@ -12,9 +11,10 @@
   background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  border-radius: 50%;
+  width: 50px;
+  height: 50px; 
+  border-radius: 50%; 
 }
 
 .scroll-up-button.hidden {
