--- a/src/Footer/about.css
+++ b/src/Footer/about.css
@@ -1,20 +1,192 @@
-.mainfooter {
-  color: white;
-  padding: 20px;
-  text-align: start;
-}
-.mangerfooter {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-#inputvaled {
-  height: 25px;
-}
-#conbtn {
-}
-.col_footer {
-  background: linear-gradient(90deg, hsl(192, 32%, 35%), hsl(120, 10%, 4%));
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
+.my-footer-res {
+  /* Main Footer */
+  footer .main-footer {
+    padding: 20px 0;
+    background: linear-gradient(90deg, hsl(210, 50%, 25%), hsl(210, 40%, 15%)); /* تدرج لوني من درجات الأزرق الداكن */
+  }
+  footer ul {
+    padding-left: 0;
+    list-style: none;
+  }
+
+  /* Copy Right Footer */
+  .footer-copyright {
+    background: hsl(210, 30%, 10%); /* لون خلفية أغمق قليلاً */
+    padding: 5px 0;
+  }
+  .footer-copyright .logo {
+    display: inherit;
+  }
+  .footer-copyright nav {
+    float: right;
+    margin-top: 5px;
+  }
+  .footer-copyright nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-copyright nav ul li {
+    border-left: 1px solid hsl(210, 20%, 35%); /* تعديل الحدود لتكون متناسقة مع الخلفية */
+    display: inline-block;
+    line-height: 12px;
+    margin: 0;
+    padding: 0 8px;
+  }
+  .footer-copyright nav ul li a {
+    color: hsl(210, 10%, 70%); /* لون نص فاتح للتباين مع الخلفية الداكنة */
+  }
+  .footer-copyright nav ul li:first-child {
+    border: medium none;
+    padding-left: 0;
+  }
+  .footer-copyright p {
+    color: hsl(210, 10%, 70%);
+    margin: 2px 0 0;
+  }
+
+  /* Footer Top */
+  .footer-top {
+    background: hsl(210, 40%, 20%); /* لون خلفية أغمق */
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 3px solid hsl(210, 30%, 10%);
+  }
+
+  /* Footer transparent */
+  footer.transparent .footer-top,
+  footer.transparent .main-footer {
+    background: transparent;
+  }
+  footer.transparent .footer-copyright {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+  }
+
+  /* Footer light */
+  footer.light .footer-top {
+    background: #f9f9f9;
+  }
+  footer.light .main-footer {
+    background: #f9f9f9;
+  }
+  footer.light .footer-copyright {
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+  }
+
+  /* Footer 4 */
+  .footer- .logo {
+    display: inline-block;
+  }
+
+  /*==================== 
+	Widgets 
+====================== */
+  .widget {
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+  .widget.widget-last {
+    margin-bottom: 0px;
+  }
+  .widget.no-box {
+    padding: 0;
+    background-color: transparent;
+    margin-bottom: 40px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+  }
+  .widget.subscribe p {
+    margin-bottom: 18px;
+  }
+  .widget li a {
+    color: hsl(195, 80%, 55%); /* لون سماوي للأزرار */
+  }
+  .widget li a:hover {
+    color: hsl(210, 60%, 50%); /* لون أزرق مميز عند التمرير */
+  }
+  .widget-title {
+    margin-bottom: 20px;
+  }
+  .widget-title span {
+    background: hsl(210, 20%, 50%);
+    display: block;
+    height: 1px;
+    margin-top: 25px;
+    position: relative;
+    width: 20%;
+  }
+  .widget-title span::after {
+    background: inherit;
+    content: "";
+    height: inherit;
+    position: absolute;
+    top: -4px;
+    width: 50%;
+  }
+  .widget-title.text-center span,
+  .widget-title.text-center span::after {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+  .widget .badge {
+    float: right;
+    background: hsl(210, 10%, 40%);
+  }
+
+  .typo-light h1,
+  .typo-light h2,
+  .typo-light h3,
+  .typo-light h4,
+  .typo-light h5,
+  .typo-light h6,
+  .typo-light p,
+  .typo-light div,
+  .typo-light span,
+  .typo-light small {
+    color: #fff;
+  }
+
+  ul.social-footer2 {
+    margin: 0;
+    padding: 0;
+    width: auto;
+  }
+  ul.social-footer2 li {
+    display: inline-block;
+    padding: 0;
+  }
+  ul.social-footer2 li a:hover {
+    background-color: hsl(195, 80%, 55%);
+  }
+  ul.social-footer2 li a {
+    display: block;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+  }
+  .btn {
+    background-color: hsl(195, 80%, 55%);
+    color: #fff;
+  }
+  .btn:hover,
+  .btn:focus,
+  .btn.active {
+    background: hsl(210, 60%, 50%);
+    color: #fff;
+    -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 250ms ease-in-out 0s;
+    -moz-transition: all 250ms ease-in-out 0s;
+    -ms-transition: all 250ms ease-in-out 0s;
+    -o-transition: all 250ms ease-in-out 0s;
+    transition: all 250ms ease-in-out 0s;
+  }
 }
