--- a/src/Footer/about.scss
+++ b/src/Footer/about.scss
@@ -1,8 +1,9 @@
 .my-footer-res {
   /* Main Footer */
   footer .main-footer {
-    padding: 20px 0;
-    background: linear-gradient(90deg, hsl(210, 50%, 25%), hsl(210, 40%, 15%)); /* تدرج لوني من درجات الأزرق الداكن */
+    margin-top: 15%;
+    padding: 30px 0;
+    background: linear-gradient(90deg, hsl(210, 50%, 25%), hsl(210, 40%, 15%));
   }
   footer ul {
     padding-left: 0;
@@ -11,7 +12,7 @@
 
   /* Copy Right Footer */
   .footer-copyright {
-    background: hsl(210, 30%, 10%); /* لون خلفية أغمق قليلاً */
+    background: hsl(210, 30%, 10%);
     padding: 5px 0;
   }
   .footer-copyright .logo {
@@ -27,14 +28,14 @@
     padding: 0;
   }
   .footer-copyright nav ul li {
-    border-left: 1px solid hsl(210, 20%, 35%); /* تعديل الحدود لتكون متناسقة مع الخلفية */
+    border-left: 1px solid hsl(210, 20%, 35%); 
     display: inline-block;
     line-height: 12px;
     margin: 0;
     padding: 0 8px;
   }
   .footer-copyright nav ul li a {
-    color: hsl(210, 10%, 70%); /* لون نص فاتح للتباين مع الخلفية الداكنة */
+    color: hsl(210, 10%, 70%); 
   }
   .footer-copyright nav ul li:first-child {
     border: medium none;
@@ -47,7 +48,7 @@
 
   /* Footer Top */
   .footer-top {
-    background: hsl(210, 40%, 20%); /* لون خلفية أغمق */
+    background: hsl(210, 40%, 20%); 
     padding-bottom: 30px;
     margin-bottom: 30px;
     border-bottom: 3px solid hsl(210, 30%, 10%);
@@ -102,10 +103,10 @@
     margin-bottom: 18px;
   }
   .widget li a {
-    color: hsl(195, 80%, 55%); /* لون سماوي للأزرار */
+    color: hsl(195, 80%, 55%); 
   }
   .widget li a:hover {
-    color: hsl(210, 60%, 50%); /* لون أزرق مميز عند التمرير */
+    color: hsl(210, 60%, 50%); 
   }
   .widget-title {
     margin-bottom: 20px;
